# responder

./: Cargo.toml  Dockerfile  README.md
example/: manifest.json  manifest.yaml
example/responses/: 405.http  head.http  options.http  root.http
src/: lib.rs  manifest_json.rs  manifest_yaml.rs  packager.rs  server.rs
